Updating News - JavaOne 2010 BOF slides
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2853 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,11 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">September 27th, 2010:</span> JavaOne 2010 slides for BOF S313337
+                    &quot;Advanced Monitoring and Troubleshooting with VisualVM&quot;
+                    are now available as a <a href="https://visualvm.dev.java.net/files/documents/7163/153162/JavaOne-2010-BOF-S313337.pdf">.pdf document</a>.
+                </p>
+
                 <p><span class="news_date">September 20th, 2010:</span> VisualVM 1.3.1 released. This release upgrades the
                     underlying framework to the NetBeans Platform 6.9.1 and delivers several bugfixes. The tool can be
                     downloaded from the <a href="download.html">Download</a> page, sources are available in
@@ -61,13 +66,6 @@
                     replaced by the VisualVM Harness covering both VisualVM 1.2.2 (built on NetBeans Platform 6.8)
                     and VisualVM 1.3 (built on NetBeans Platform 6.9). Details are available in
                     <a href="http://mail.openjdk.java.net/pipermail/distro-pkg-dev/2010-September/010208.html">this announcement</a>.
-                </p>
-
-                <p><span class="news_date">July 26th, 2010:</span> VisualVM 1.3 released. It incorporates the Sampler plugin into the core tool,
-                    enables taking remote heap dumps, monitoring remote hosts, detailed application analysis using the Tracer plugin and
-                    much more. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
-                    <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release13"><code>release13</code></a>
-                    branch. See the <a href="relnotes.html">Release Notes</a> for more information.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
