--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,13 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">July 26th, 2010:</span> VisualVM 1.3 released. It incorporates the Sampler plugin into the core tool,
+                    enables taking remote heap dumps, monitoring remote hosts, detailed application analysis using the Tracer plugin and
+                    much more. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release13"><code>release13</code></a>
+                    branch. See the <a href="relnotes.html">Release Notes</a> for more information.
+                </p>
+
                 <p><span class="news_date">July 7th, 2010:</span> JDK 6 Update 21 released, it contains Java VisualVM tool
                     based on the VisualVM 1.2.2. Latest JDK 6 update from Oracle can be downloaded
                     <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
