Updating Releases table
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2856 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -104,6 +104,7 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 6 Update 22</b><br><small style="margin-left: 10px;">Released: October 12th, 2010, <a href="http://www.oracle.com/technetwork/java/javase/6u22releasenotes-176121.html">Release Notes</a></small></div>
                                 <div><b>JDK 6 Update 21</b><br><small style="margin-left: 10px;">Released: July 7th, 2010, <a href="http://java.sun.com/javase/6/webnotes/6u21.html">Release Notes</a></small></div>
                             </td>
                         </tr>
