Updating Charts documentation
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2883 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-charts.html
+++ b/www/api-charts.html
@@ -169,7 +169,7 @@
                 </p>
             </div>
 
-            <a name="api_description"></a>
+            <a name="api"></a>
             <h3>API Description</h3>
             <div>
                 <p style="margin-top: 5px;">VisualVM Charts API is defined in the
@@ -288,11 +288,11 @@
         
         <h3 class="first">On This Page</h3>
         <div>
-            <a href="#charts_visualvm">Features</a>
-            <a href="#charts_visualvm">VisualVM Plugins</a>
-            <a href="#charts_nbplatform">NetBeans Platform Applications</a>
-            <a href="#charts_swing">Swing Applications</a>
-            <a href="#api_description">API Description</a>
+            <a href="#features">Features</a>
+            <a href="#visualvm">VisualVM Plugins</a>
+            <a href="#nbplatform">NetBeans Platform Applications</a>
+            <a href="#swing">Swing Applications</a>
+            <a href="#api">API Description</a>
         </div>
         
         <h3>Quick Links</h3>
