--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,11 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">December 7th, 2010:</span> JDK 6 Update 23 released, it contains Java VisualVM tool
+                    based on VisualVM 1.3.1. Latest JDK 6 update from Oracle can be downloaded
+                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
+                </p>
+
                 <p><span class="news_date">September 27th, 2010:</span> JavaOne 2010 slides for BOF S313337
                     &quot;Advanced Monitoring and Troubleshooting with VisualVM&quot;
                     are now available as a <a href="https://visualvm.dev.java.net/files/documents/7163/153162/JavaOne-2010-BOF-S313337.pdf">.pdf document</a>.
@@ -59,13 +64,6 @@
                     underlying framework to the NetBeans Platform 6.9.1 and delivers several bugfixes. The tool can be
                     downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release131"><code>release131</code></a> branch.
-                </p>
-
-                <p><span class="news_date">September 7th, 2010:</span> VisualVM Harness 1.0 has been released to
-                    simplify the build and packaging of OpenJDK. As of IcedTea6 1.9, VisualVM build support has been
-                    replaced by the VisualVM Harness covering both VisualVM 1.2.2 (built on NetBeans Platform 6.8)
-                    and VisualVM 1.3 (built on NetBeans Platform 6.9). Details are available in
-                    <a href="http://mail.openjdk.java.net/pipermail/distro-pkg-dev/2010-September/010208.html">this announcement</a>.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
