--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,13 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">September 7th, 2010:</span> VisualVM Harness 1.0 has been released to
+                    simplify the build and packaging of OpenJDK. As of IcedTea6 1.9, VisualVM build support has been
+                    replaced by the VisualVM Harness covering both VisualVM 1.2.2 (built on NetBeans Platform 6.8)
+                    and VisualVM 1.3 (built on NetBeans Platform 6.9). Details are available in
+                    <a href="http://mail.openjdk.java.net/pipermail/distro-pkg-dev/2010-September/010208.html">this announcement</a>.
+                </p>
+
                 <p><span class="news_date">July 26th, 2010:</span> VisualVM 1.3 released. It incorporates the Sampler plugin into the core tool,
                     enables taking remote heap dumps, monitoring remote hosts, detailed application analysis using the Tracer plugin and
                     much more. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
