--- a/www/releases.html
+++ b/www/releases.html
@@ -84,7 +84,7 @@
                             </td>
 
                             <td>
-                                <div>not released yet</div>
+                                <div><b>JDK 6 Update 23</b><br><small style="margin-left: 10px;">Released: December 7th, 2010, <a href="http://www.oracle.com/technetwork/java/javase/6u23releasenotes-191058.html">Release Notes</a></small></div>
                             </td>
                         </tr>
 
