Migrating VisualVM to kenai infrastructure - style
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2892 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
 
             <!--h3>VisualVM Is Designed For You</h3-->
             <h3>Project Migration</h3>
-            <div id="spotlight" style="background: #fbc2a0">
+            <div id="spotlight" style="background: #fbc9ac">
                 <!--div><b>Application Developer:</b> Monitor, profile, take thread dumps, browse heap dumps</div>
                 <div><b>System Administrator:</b> Monitor and control Java applications across the entire network</div>
                 <div><b>Java Application User:</b> Create bug reports containing all the necessary information</div-->
