--- a/www/jmx_connections.html
+++ b/www/jmx_connections.html
@@ -1,4 +1,4 @@
-<!-- Copyright 2008 Sun Microsystems, Inc.  All Rights Reserved.  -->
+<!-- Copyright (c) 2008, 2011, Oracle and/or its affiliates. All rights reserved.  -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
