java.net migration
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2903 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/docindex.html
+++ b/www/docindex.html
@@ -117,8 +117,8 @@
         <div>
             <a href="intro.html">Introduction to VisualVM</a>
             <a href="troubleshooting.html">Troubleshooting Guide</a>
-            <a href="mailto:users@visualvm.dev.java.net">Ask the Community</a>
-            <a href="mailto:feedback@visualvm.dev.java.net">Send Feedback</a>
+            <a href="mailto:users@visualvm.java.net">Ask the Community</a>
+            <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
         </div>
         
     </div>
