--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -33,9 +33,11 @@
 
         </style>
 
-        <link rel="stylesheet" href="css/slimbox.css" type="text/css" media="screen" />
-        <script type="text/javascript" src="js/mootools.js"></script>
-        <script type="text/javascript" src="js/slimbox.js"></script>
+        <link rel="stylesheet" type="text/css" href="http://visualvm.java.net/shadowbox/shadowbox.css">
+        <script type="text/javascript" src="http://visualvm.java.net/shadowbox/shadowbox.js"></script>
+        <script type="text/javascript">
+        Shadowbox.init();
+        </script>
 
     </head>
 
