--- a/www/index.html
+++ b/www/index.html
@@ -5,9 +5,9 @@
 
         <link rel="stylesheet" type="text/css" href="css/index.css"/>
 
-        <link rel="stylesheet" href="css/slimbox.css" type="text/css" media="screen" />
-        <script type="text/javascript" src="js/mootools.js"></script>
-        <script type="text/javascript" src="js/slimbox.js"></script>
+        <link rel="stylesheet" type="text/css" href="http://visualvm.java.net/shadowbox/shadowbox.css">
+        <script type="text/javascript" src="http://visualvm.java.net/shadowbox/shadowbox.js"></script>
+        <script type="text/javascript" src="http://visualvm.java.net/js/screenshots.js"></script>
 
         <script type="text/javascript" src="js/index.js"></script>
 
@@ -90,27 +90,6 @@
                 </p>
             </div>
 
-            <div class="h2" id="subprojects2" style="margin-top: 0px;">
-                <h2>Subprojects</h2>
-
-                <table width="100%">
-                    <tr>
-                        <th>Name</th>
-                        <th>Summary</th>
-                    </tr>
-
-                    <tr class="a">
-                        <td><a href="https://btrace.dev.java.net/">btrace</a></td>
-                        <td>BTrace - dynamic, safe tracing system for the Java platform</td>
-                    </tr>
-
-                    <tr class="b">
-                        <td><a href="https://gchisto.dev.java.net/">gchisto</a></td>
-                        <td>A garbage collection log visualization tool.</td>
-                    </tr>
-                </table>
-            </div>
-
         </div>
     </div>
 
@@ -122,15 +101,15 @@
             <a href="troubleshooting.html">Troubleshooting Guide</a>
             <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">Report a Bug</a>
             <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=FEATURE">Request a Feature</a>
-            <a href="mailto:feedback@visualvm.dev.java.net">Send Feedback</a>
+            <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
         </div>
 
         <h3>Plugin Developers</h3>
         <div>
-            <a href="https://visualvm.dev.java.net/source/browse/visualvm/">Sources</a>
+            <a href="http://java.net/projects/visualvm/sources/svn/show">Sources</a>
             <a href="build.html">Build Guide</a>
             <a href="http://java.dzone.com/announcements/visualvm-sample-collection-10">Sample Projects</a>
-            <a href="https://visualvm.dev.java.net/api-quickstart.html">Developer Documentation</a>
+            <a href="api-quickstart.html">Developer Documentation</a>
             <a href="nonav/apidocs/13/index.html">API Documentation</a>
         </div>
 
