--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -52,12 +52,12 @@
         .plugcentable th {
             vertical-align: middle;
             text-align: center;
-            padding: 5px;
+            padding: 5px !important;
         }
 
         .plugcentable td {
             vertical-align: top;
-            padding: 5px;
+            padding: 5px !important;
         }
 
         td.release {
