--- a/www/releases.html
+++ b/www/releases.html
@@ -66,8 +66,8 @@
             <h1>Releases Overview</h1>
             
             <p style="margin-bottom: 15px;">
-                This document summarizes all versions of the VisualVM tool released at <a href="https://visualvm.dev.java.net">visualvm.dev.java.net</a> and corresponding Java VisualVM
-                released as a <a href="http://java.sun.com/javase/6/docs/technotes/tools/share/jvisualvm.html">JDK tool</a>. The Releases Table shows which VisualVM release is the basis
+                This document summarizes all versions of the VisualVM tool released at <a href="https://visualvm.java.net">visualvm.java.net</a> and corresponding Java VisualVM
+                released as a <a href="http://download.oracle.com/javase/6/docs/technotes/tools/share/jvisualvm.html">JDK tool</a>. The Releases Table shows which VisualVM release is the basis
                 for Java VisualVM in respective JDK update.
             </p>
             
