java.net migration - mailing-list references updated
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2906 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -116,7 +116,7 @@
                     <a href="features.html">VisualVM Features</a>
                     <a href="download.html">Download VisualVM</a>
                     <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=FEATURE">Request a Feature</a>
-                    <a href="mailto:feedback@visualvm.dev.java.net">Send Feedback</a>
+                    <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
                 </div>
 
             </div>
