--- a/www/news.html
+++ b/www/news.html
@@ -140,7 +140,7 @@
                     build for testing and evaluation purposes (see the <a href="relnotes12tb.html">Release Notes</a>).
                     <a href="https://visualvm.dev.java.net/files/documents/7163/143769/visualvm_12_testbuild.zip">Download it</a>,
                     try out the new features and let the developers know: send your feedback to
-                    <a href="mailto:feedback@visualvm.dev.java.net?subject=VisualVM 1.2 Test Build Feedback">feedback@visualvm.dev.java.net</a>
+                    <a href="mailto:feedback@visualvm.java.net?subject=VisualVM 1.2 Test Build Feedback">feedback@visualvm.java.net</a>
                     or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a> into
                     the Issue Tracker (dev.java.net login is required).
                 </p>
@@ -240,7 +240,7 @@
                 
                 <p><span class="news_date">July 8th, 2008:</span> Project pages redesigned. We have updated project pages to be visually consistent with the tool,
                     to provide all the information necessary for VisualVM users and plugin developers and to be easy to use. If you can't find the information you are
-                    searching for, please let us know on a <a href="mailto:feedback@visualvm.dev.java.net">mailing list</a>.
+                    searching for, please let us know on a <a href="mailto:feedback@visualvm.java.net">mailing list</a>.
                 </p>
                 
                 <p><span class="news_date">May 6th, 2008:</span> VisualVM 1.0 RC released. This is mainly a stabilization
