--- a/www/ontheweb.html
+++ b/www/ontheweb.html
@@ -80,7 +80,7 @@
             
             <p>
                 This page lists all previously presented articles, documents and blog posts related to VisualVM from all around the Web. To see the latest links please navigate to <a href="https://visualvm.dev.java.net">VisualVM frontpage</a>.
-                If you know about some interesting resource which should be linked here, please let us know on a <a href="mailto:feedback@visualvm.dev.java.net">mailing list</a>.
+                If you know about some interesting resource which should be linked here, please let us know on a <a href="mailto:feedback@visualvm.java.net">mailing list</a>.
             </p>
             
             <p style="margin-bottom: 15px;">
