--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -61,7 +61,7 @@
 
             <p style="margin-bottom: 15px;">
                 This document describes the most common problems related to using VisualVM and information on how to fix or workaround the problems.
-                If you are experiencing any problem not described in this document, please ask for assistance on a <a href="mailto:users@visualvm.dev.java.net">mailing list</a> or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a> (you need to be registered to access the mailing list or file a bug report).
+                If you are experiencing any problem not described in this document, please ask for assistance on a <a href="mailto:users@visualvm.java.net">mailing list</a> or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a> (you need to be registered to access the mailing list or file a bug report).
             </p>
 
             <a name="starting"></a>
@@ -235,7 +235,7 @@
         <h3>Quick Links</h3>
         <div>
             <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">Report a Bug</a>
-            <a href="mailto:feedback@visualvm.dev.java.net">Send Feedback</a>
+            <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
         </div>
 
     </div>
