--- a/www/api-charts.html
+++ b/www/api-charts.html
@@ -299,7 +299,7 @@
         <div>
             <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=FEATURE">Request a Feature</a>
             <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">Report a Bug</a>
-            <a href="mailto:feedback@visualvm.dev.java.net">Send Feedback</a>
+            <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
             <a href="https://visualvm.dev.java.net/api-quickstart.html">Developer Documentation</a>
             <a href="https://visualvm.dev.java.net/nonav/apidocs/13/index.html">API Documentation</a>
         </div>
