--- a/www/description.html
+++ b/www/description.html
@@ -16,7 +16,7 @@
         <p>As of October, 2007 VisualVM is still under development and is therefore
             considered an experimental tool.  All feedback and suggestions are welcome!
             Please send your ideas to
-            <a href="mailto:feedback@visualvm.dev.java.net">feedback@visualvm.dev.java.net</a>.
+            <a href="mailto:feedback@visualvm.java.net">feedback@visualvm.java.net</a>.
         </p>
         
         <a name="system_requirements"></a>
