dev.java.net -> java.net migration
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2909 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/features.html
+++ b/www/features.html
@@ -135,7 +135,7 @@
                 </p>
                 
                 <p style="margin-bottom: 10px;">
-                    If you need a special feature or support for a proprietary tool, you can implement your own plugin. It's easy and there is plenty of information and sample code available for both the NetBeans Platform and VisualVM APIs. A good place to start is the <a href="https://visualvm.dev.java.net/api-quickstart.html">Developer Documentation</a> page.
+                    If you need a special feature or support for a proprietary tool, you can implement your own plugin. It's easy and there is plenty of information and sample code available for both the NetBeans Platform and VisualVM APIs. A good place to start is the <a href="http://visualvm.java.net/api-quickstart.html">Developer Documentation</a> page.
                 </p>
             </div>
 
@@ -152,7 +152,7 @@
                 </p>
 
                 <!--p style="margin-bottom: 10px;">
-                    If you need a special feature or support for a proprietary tool, you can implement your own plugin. It's easy and there is plenty of information and sample code available for both the NetBeans Platform and VisualVM APIs. A good place to start is the <a href="https://visualvm.dev.java.net/api-quickstart.html">Developer Documentation</a> page.
+                    If you need a special feature or support for a proprietary tool, you can implement your own plugin. It's easy and there is plenty of information and sample code available for both the NetBeans Platform and VisualVM APIs. A good place to start is the <a href="http://visualvm.java.net/api-quickstart.html">Developer Documentation</a> page.
                 </p-->
             </div>
             
