--- a/www/zh_CN/gettingstarted.html
+++ b/www/zh_CN/gettingstarted.html
@@ -21,7 +21,7 @@
         
         <h3>安装 VisualVM</h3>
         <ol>
-            <li>从 <a href="https://visualvm.dev.java.net/">VisualVM 项目页</a>下载 VisualVM 安装程序。</li>
+            <li>从 <a href="http://visualvm.java.net/">VisualVM 项目页</a>下载 VisualVM 安装程序。</li>
             <li>将 VisualVM 安装程序解压缩到本地系统。</li>
             <li>导航至 VisualVM 安装目录的 <tt>bin</tt> 目录，然后启动应用程序。</li>
         </ol>    
@@ -118,7 +118,7 @@
         <h2>其他 VisualVM 文档</h2>
         <p>本文档介绍了 VisualVM 的某些功能。VisualVM 旨在提供一个直观的可视界面，使您可以轻松浏览有关本地和远程 JVM 上运行的 Java 应用程序的信息。有关使用 VisualVM 功能的更多详细信息，请参见以下文档：</p>
         <ul>
-            <li><a href="https://visualvm.dev.java.net/docindex.html">VisualVM Documentation and Resources</a>（VisualVM 文档和资源）。</li>
+            <li><a href="http://visualvm.java.net/docindex.html">VisualVM Documentation and Resources</a>（VisualVM 文档和资源）。</li>
         </ul>
     </body>
 </html>
