--- a/www/build.html
+++ b/www/build.html
@@ -29,7 +29,7 @@ followed by<br>
 <li><b>plugins</b>: which contains the plugins available in the VisualVM Plugin Center.</li>
 </ul>
 
-<p>The layout in <a href="https://visualvm.dev.java.net/source/browse/visualvm/?only_with_tag=release131">CVS</a> for VisualVM 1.3.1 release is:</p>
+<p>The layout in <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release131">SVN</a> for VisualVM 1.3.1 release is:</p>
 <ul>
     <li>visualvm
         <ul>
