--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
                 <p><span class="news_date">September 20th, 2010:</span> VisualVM 1.3.1 released. This release upgrades the
                     underlying framework to the NetBeans Platform 6.9.1 and delivers several bugfixes. The tool can be
                     downloaded from the <a href="download.html">Download</a> page, sources are available in
-                    <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release131"><code>release131</code></a> branch.
+                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release131/visualvm"><code>release131</code></a> branch.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
