links to issues migrated to java.net/jira
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2910 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/relnotes.html
+++ b/www/relnotes.html
@@ -114,22 +114,22 @@
                 <p style="margin-top: 5px; margin-bottom: 10px;">
                     <b>Fixed bugs:</b><br>
                     <ul>
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=397">Issue 397</a>: Overview tab does not have 'Details' and 'Saved data'
+                        <li><a href="http://java.net/jira/browse/VISUALVM-397">Issue 397</a>: Overview tab does not have 'Details' and 'Saved data'
                         </li>
 
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=398">Issue 398</a>: BTrace probes are enabled for remote application
+                        <li><a href="http://java.net/jira/browse/VISUALVM-398">Issue 398</a>: BTrace probes are enabled for remote application
                         </li>
 
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=403">Issue 403</a>: [I18N] Show/Hide section checkbox tooltip not from bundle
+                        <li><a href="http://java.net/jira/browse/VISUALVM-403">Issue 403</a>: [I18N] Show/Hide section checkbox tooltip not from bundle
                         </li>
 
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=405">Issue 405</a>: UnsupportedOperationException when opening remote application
+                        <li><a href="http://java.net/jira/browse/VISUALVM-405">Issue 405</a>: UnsupportedOperationException when opening remote application
                         </li>
 
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=406">Issue 406</a>: Confusing message in HeapWalker
+                        <li><a href="http://java.net/jira/browse/VISUALVM-406">Issue 406</a>: Confusing message in HeapWalker
                         </li>
 
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=407">Issue 407</a>: Bad Tracer charts quality
+                        <li><a href="http://java.net/jira/browse/VISUALVM-407">Issue 407</a>: Bad Tracer charts quality
                         </li>
                     </ul>
                 </p>
@@ -143,16 +143,16 @@
             <h3>Known Problems</h3>
             <div>
                 <ul>
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=224">Issue 224</a>: Cannot memory profile JBoss AS 4.2.3.GA
+                    <li><a href="http://java.net/jira/browse/VISUALVM-224">Issue 224</a>: Cannot memory profile JBoss AS 4.2.3.GA
                     </li>
 
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=148">Issue 148</a>: VisualVM hangs when lost remote connection
+                    <li><a href="http://java.net/jira/browse/VISUALVM-148">Issue 148</a>: VisualVM hangs when lost remote connection
                     </li>
 
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=120">Issue 120</a>: JMX application datasource cannot be reused on application restart
+                    <li><a href="http://java.net/jira/browse/VISUALVM-120">Issue 120</a>: JMX application datasource cannot be reused on application restart
                     </li>
 
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=72">Issue 72</a>: Running application sometimes not recognized
+                    <li><a href="http://java.net/jira/browse/VISUALVM-72">Issue 72</a>: Running application sometimes not recognized
                     </li>
                 </ul>
 
