--- a/www/relnotes122.html
+++ b/www/relnotes122.html
@@ -125,19 +125,19 @@
                 <p style="margin-top: 5px; margin-bottom: 10px;">
                     <b>Fixed bugs:</b><br>
                     <ul>
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=339">Issue 339</a>: --cp:a command line argument does not work
+                        <li><a href="http://java.net/jira/browse/VISUALVM-339">Issue 339</a>: --cp:a command line argument does not work
                         </li>
 
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=345">Issue 345</a>: Profiler Agent Warning: Failed to lookup cached class
+                        <li><a href="http://java.net/jira/browse/VISUALVM-345">Issue 345</a>: Profiler Agent Warning: Failed to lookup cached class
                         </li>
 
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=346">Issue 346</a>: "profiled application does not respond" dialog
+                        <li><a href="http://java.net/jira/browse/VISUALVM-346">Issue 346</a>: "profiled application does not respond" dialog
                         </li>
 
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=349">Issue 349</a>: Unnecessary refresh in memory sampler
+                        <li><a href="http://java.net/jira/browse/VISUALVM-349">Issue 349</a>: Unnecessary refresh in memory sampler
                         </li>
 
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=344">Issue 344</a>: Proxy Settings button in Plugins doesn't work on JDK 7
+                        <li><a href="http://java.net/jira/browse/VISUALVM-344">Issue 344</a>: Proxy Settings button in Plugins doesn't work on JDK 7
                         </li>
                     </ul>
                 </p>
@@ -147,16 +147,16 @@
             <h3>Known Problems</h3>
             <div>                
                 <ul>
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=224">Issue 224</a>: Cannot memory profile JBoss AS 4.2.3.GA
+                    <li><a href="http://java.net/jira/browse/VISUALVM-224">Issue 224</a>: Cannot memory profile JBoss AS 4.2.3.GA
                     </li>
 
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=148">Issue 148</a>: VisualVM hangs when lost remote connection
+                    <li><a href="http://java.net/jira/browse/VISUALVM-148">Issue 148</a>: VisualVM hangs when lost remote connection
                     </li>
 
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=120">Issue 120</a>: JMX application datasource cannot be reused on application restart
+                    <li><a href="http://java.net/jira/browse/VISUALVM-120">Issue 120</a>: JMX application datasource cannot be reused on application restart
                     </li>
                     
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=72">Issue 72</a>: Running application sometimes not recognized
+                    <li><a href="http://java.net/jira/browse/VISUALVM-72">Issue 72</a>: Running application sometimes not recognized
                     </li>
                 </ul>
 
