--- a/www/relnotes12.html
+++ b/www/relnotes12.html
@@ -217,22 +217,22 @@
             <h3>Known Problems</h3>
             <div>                
                 <ul>
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=333">Issue 333</a>: HeapWalker in VisualVM doesn't work with JDK 6 Update 17+
+                    <li><a href="http://java.net/jira/browse/VISUALVM-333">Issue 333</a>: HeapWalker in VisualVM doesn't work with JDK 6 Update 17+
                     </li>
 
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=224">Issue 224</a>: Cannot memory profile JBoss AS 4.2.3.GA
+                    <li><a href="http://java.net/jira/browse/VISUALVM-224">Issue 224</a>: Cannot memory profile JBoss AS 4.2.3.GA
                     </li>
 
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=148">Issue 148</a>: VisualVM hangs when lost remote connection
+                    <li><a href="http://java.net/jira/browse/VISUALVM-148">Issue 148</a>: VisualVM hangs when lost remote connection
                     </li>
 
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=327">Issue 327</a>: Maximum value in Monitor charts is Integer.MAX_VALUE (hotfix <a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=327">available</a>)
+                    <li><a href="http://java.net/jira/browse/VISUALVM-327">Issue 327</a>: Maximum value in Monitor charts is Integer.MAX_VALUE (hotfix <a href="http://java.net/jira/browse/VISUALVM-327">available</a>)
                     </li>
 
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=120">Issue 120</a>: JMX application datasource cannot be reused on application restart
+                    <li><a href="http://java.net/jira/browse/VISUALVM-120">Issue 120</a>: JMX application datasource cannot be reused on application restart
                     </li>
                     
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=72">Issue 72</a>: Running application sometimes not recognized
+                    <li><a href="http://java.net/jira/browse/VISUALVM-72">Issue 72</a>: Running application sometimes not recognized
                     </li>
                 </ul>
 
