--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -153,14 +153,14 @@
             <h4>Cannot Add Or Edit Hosts On Linux</h4>
             <p><b>Description:&nbsp;</b>Adding a remote host and/or invoking Properties on an existing host throws <code>java.lang.NullPointerException</code> on Linux/Solaris, new host cannot be added.</p>
             <p><b>Resolution:&nbsp;&nbsp;</b>This happens when running the VisualVM 1.2 or newer on JDK 7 or OpenJDK 6 with GTK LaF. It is caused by a JDK bug introduced in JDK 7 b10. Details are available in
-                <a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=372">VisualVM bug #372</a>. A quick workaround is to change the look'n'feel using
+                <a href="http://java.net/jira/browse/VISUALVM-372">VisualVM bug #372</a>. A quick workaround is to change the look'n'feel using
                 <code>visualvm --laf Nimbus</code> or <code>visualvm --laf Metal</code> or use Sun JDK 6 to run VisualVM.</p><br>
 
             <a name="6u17win"></a>
             <h4>HeapWalker Throws Exceptions When Switching Views</h4>
             <p><b>Description:&nbsp;</b>Switching views (Overview/Classes/Instances/OQL Console) in the HeapWalker throws <code>java.lang.IncompatibleClassChangeError</code>, UI is not repainted.</p>
             <p><b>Resolution:&nbsp;&nbsp;</b>This happens when running the VisualVM on JDK 6 Update 17 and newer using the Windows LaF. Details and hotfix are available in
-                <a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=333">VisualVM bug #333</a>. A quick workaround is to change the look'n'feel using
+                <a href="http://java.net/jira/browse/VISUALVM-333">VisualVM bug #333</a>. A quick workaround is to change the look'n'feel using
                 <code>visualvm.exe --laf Nimbus</code> or <code>visualvm.exe --laf Metal</code> or use JDK 6 Update 16 (or previous) to run VisualVM.</p><br>
 
             <a name="xshare"></a>
