Fixed eclipse-launcher download link
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2913 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -63,7 +63,7 @@
                     <a name="download"></a>
                     <h3>Download</h3>
                     <div style="background: #f0f1f2; padding: 10px; padding-left: 20px; margin-bottom: 10px;">
-                        <div><a href="https://visualvm.dev.java.net/files/documents/7163/119087/visualvm-launcher.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM Launcher</span></a> (.zip, 42KB)</div>
+                        <div><a href="http://java.net/downloads/visualvm/release11/visualvm-launcher.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM Launcher</span></a> (.zip, 42KB)</div>
                     </div>
 
                     <a name="installation"></a>
@@ -84,7 +84,7 @@
                         <li>JDK Home to be used by VisualVM (needs to be a JDK, not JRE)</li>
                         <li>The path to VisualVM executable (VisualVM 1.1+ is supported)</li>
                     </ul>
-                    
+
                     <a name="usage"></a>
                     <h3>Usage</h3>
                     <div>
