--- a/www/releases.html
+++ b/www/releases.html
@@ -78,9 +78,18 @@
                     <table id="reltable" border="1">
                         <tr><th><b>VisualVM</b></th><th><b>Corresponding Java&nbsp;VisualVM<br></b></th></tr>
 
-                        <tr>
+                         <tr>
                             <td>
-                                <div><b>VisualVM 1.3.1</b><br><small style="margin-left: 10px;">Released: September 20th, 2010, <a href="https://visualvm.dev.java.net/files/documents/7163/152922/visualvm_131.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/152923/visualvm_131-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.3.2</b><br><small style="margin-left: 10px;">Released: March 3rd, 2011, <a href="http://java.net/downloads/visualvm/release132/visualvm_132.zip">Download</a> (<a href="http://java.net/downloads/visualvm/release132/visualvm_132-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                            </td>
+
+                            <td>
+                                <div>not yet released</div>
+                            </td>
+                        </tr>
+                       <tr>
+                            <td>
+                                <div><b>VisualVM 1.3.1</b><br><small style="margin-left: 10px;">Released: September 20th, 2010, <a href="https://visualvm.dev.java.net/files/documents/7163/152922/visualvm_131.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/152923/visualvm_131-ml.zip">ml</a>), <a href="relnotes131.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
