--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,12 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">March 3rd, 2011:</span> VisualVM 1.3.2 released. This release delivers several bugfixes 
+                    and necessary updates caused by dev.java.net migration. The tool can be
+                    downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release132/visualvm"><code>release132</code></a> branch.
+                </p>
+
                 <p><span class="news_date">December 7th, 2010:</span> JDK 6 Update 23 released, it contains Java VisualVM tool
                     based on VisualVM 1.3.1. Latest JDK 6 update from Oracle can be downloaded
                     <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
@@ -58,12 +64,6 @@
                 <p><span class="news_date">September 27th, 2010:</span> JavaOne 2010 slides for BOF S313337
                     &quot;Advanced Monitoring and Troubleshooting with VisualVM&quot;
                     are now available as a <a href="https://visualvm.dev.java.net/files/documents/7163/153162/JavaOne-2010-BOF-S313337.pdf">.pdf document</a>.
-                </p>
-
-                <p><span class="news_date">September 20th, 2010:</span> VisualVM 1.3.1 released. This release upgrades the
-                    underlying framework to the NetBeans Platform 6.9.1 and delivers several bugfixes. The tool can be
-                    downloaded from the <a href="download.html">Download</a> page, sources are available in
-                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release131/visualvm"><code>release131</code></a> branch.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
