--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,12 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">September 20th, 2010:</span> VisualVM 1.3.1 released. This release upgrades the
+                    underlying framework to the NetBeans Platform 6.9.1 and delivers several bugfixes. The tool can be
+                    downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release131/visualvm"><code>release131</code></a> branch.
+                </p>
+
                 <p><span class="news_date">September 7th, 2010:</span> VisualVM Harness 1.0 has been released to
                     simplify the build and packaging of OpenJDK. As of IcedTea6 1.9, VisualVM build support has been
                     replaced by the VisualVM Harness covering both VisualVM 1.2.2 (built on NetBeans Platform 6.8)
