dev.java.net migration - document links updated
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2935 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
 
                 <p><span class="news_date">September 27th, 2010:</span> JavaOne 2010 slides for BOF S313337
                     &quot;Advanced Monitoring and Troubleshooting with VisualVM&quot;
-                    are now available as a <a href="https://visualvm.dev.java.net/files/documents/7163/153162/JavaOne-2010-BOF-S313337.pdf">.pdf document</a>.
+                    are now available as a <a href="http://java.net/projects/visualvm/downloads/download/documents/JavaOne-2010-BOF-S313337.pdf">.pdf document</a>.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
