--- a/www/news.html
+++ b/www/news.html
@@ -144,7 +144,7 @@
 
                 <p><span class="news_date">October 5th, 2009:</span> VisualVM 1.2 Test Build released as a public development
                     build for testing and evaluation purposes (see the <a href="relnotes12tb.html">Release Notes</a>).
-                    <a href="https://visualvm.dev.java.net/files/documents/7163/143769/visualvm_12_testbuild.zip">Download it</a>,
+                    <a href="http://java.net/downloads/visualvm/release12/visualvm_12_testbuild.zip">Download it</a>,
                     try out the new features and let the developers know: send your feedback to
                     <a href="mailto:feedback@visualvm.java.net?subject=VisualVM 1.2 Test Build Feedback">feedback@visualvm.java.net</a>
                     or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a> into
@@ -173,8 +173,8 @@
 
                 <p><span class="news_date">June 4th, 2009:</span> JavaOne 2009 slides for BOF-4724
                     &quot;Monitoring and Troubleshooting Java&trade; Platform Applications with JDK&trade; Software&quot;
-                    are now available as a <a href="https://visualvm.dev.java.net/files/documents/7163/136082/JavaOne-2009-BOF-4724.pdf">.pdf document</a>,
-                    you can also get sources for the <a href="https://visualvm.dev.java.net/files/documents/7163/136081/VisualVM_BOF-4724.zip">
+                    are now available as a <a href="http://java.net/projects/visualvm/downloads/download/documents/JavaOne-2009-BOF-4724.pdf">.pdf document</a>,
+                    you can also get sources for the <a href="http://java.net/projects/visualvm/downloads/download/documents/VisualVM_BOF-4724.zip">
                     demo applications</a> (NetBeans project).
                 </p>
 
