--- a/www/releases.html
+++ b/www/releases.html
@@ -89,7 +89,7 @@
                         </tr>
                        <tr>
                             <td>
-                                <div><b>VisualVM 1.3.1</b><br><small style="margin-left: 10px;">Released: September 20th, 2010, <a href="https://visualvm.dev.java.net/files/documents/7163/152922/visualvm_131.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/152923/visualvm_131-ml.zip">ml</a>), <a href="relnotes131.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.3.1</b><br><small style="margin-left: 10px;">Released: September 20th, 2010, <a href="http://java.net/projects/visualvm/downloads/download/release131/visualvm_131.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release131/visualvm_131-ml.zip">ml</a>), <a href="relnotes131.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -102,7 +102,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.3</b><br><small style="margin-left: 10px;">Released: July 26th, 2010, <a href="https://visualvm.dev.java.net/files/documents/7163/151728/visualvm_13.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/151730/visualvm_13-ml.zip">ml</a>), <a href="relnotes13.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.3</b><br><small style="margin-left: 10px;">Released: July 26th, 2010, <a href="http://java.net/projects/visualvm/downloads/download/release13/visualvm_13.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release13/visualvm_13-ml.zip">ml</a>), <a href="relnotes13.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -112,7 +112,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.2.2</b><br><small style="margin-left: 10px;">Released: January 6th, 2010, <a href="https://visualvm.dev.java.net/files/documents/7163/146709/visualvm_122.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/146710/visualvm_122-ml.zip">ml</a>), <a href="relnotes122.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.2.2</b><br><small style="margin-left: 10px;">Released: January 6th, 2010, <a href="http://java.net/projects/visualvm/downloads/download/release122/visualvm_122.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release122/visualvm_122-ml.zip">ml</a>), <a href="relnotes122.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -124,7 +124,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.2.1</b><br><small style="margin-left: 10px;">Released: November 9th, 2009, <a href="https://visualvm.dev.java.net/files/documents/7163/145165/visualvm_121.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/145166/visualvm_121-ml.zip">ml</a>), <a href="relnotes121.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.2.1</b><br><small style="margin-left: 10px;">Released: November 9th, 2009, <a href="http://java.net/projects/visualvm/downloads/download/release121/visualvm_121.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release121/visualvm_121-ml.zip">ml</a>), <a href="relnotes121.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -138,7 +138,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.2</b><br><small style="margin-left: 10px;">Released: October 21st, 2009, <a href="https://visualvm.dev.java.net/files/documents/7163/144406/visualvm_12.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/144407/visualvm_12-ml.zip">ml</a>), <a href="relnotes12.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.2</b><br><small style="margin-left: 10px;">Released: October 21st, 2009, <a href="http://java.net/projects/visualvm/downloads/download/release12/visualvm_12.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release12/visualvm_12-ml.zip">ml</a>), <a href="relnotes12.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -148,7 +148,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.1.1</b><br><small style="margin-left: 10px;">Released: February 17th, 2009, <a href="https://visualvm.dev.java.net/files/documents/7163/127064/visualvm_111.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/131458/visualvm_111-ml.zip">ml</a>), <a href="relnotes111.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.1.1</b><br><small style="margin-left: 10px;">Released: February 17th, 2009, <a href="http://java.net/projects/visualvm/downloads/download/release111/visualvm_111.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release111/visualvm_111-ml.zip">ml</a>), <a href="relnotes111.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -164,7 +164,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.1</b><br><small style="margin-left: 10px;">Released: December 8th, 2008, <a href="https://visualvm.dev.java.net/files/documents/7163/119696/visualvm_11.zip">Download</a>, <a href="relnotes11.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.1</b><br><small style="margin-left: 10px;">Released: December 8th, 2008, <a href="http://java.net/projects/visualvm/downloads/download/release11/visualvm_11.zip">Download</a>, <a href="relnotes11.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -174,7 +174,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.0.1</b><br><small style="margin-left: 10px;">Released: September 5th, 2008, <a href="https://visualvm.dev.java.net/files/documents/7163/109830/visualvm_101.zip">Download</a>, <a href="relnotes101.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.0.1</b><br><small style="margin-left: 10px;">Released: September 5th, 2008, <a href="http://java.net/projects/visualvm/downloads/download/release101/visualvm_101.zip">Download</a>, <a href="relnotes101.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -188,7 +188,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.0</b><br><small style="margin-left: 10px;">Released: July 8th, 2008, <a href="https://visualvm.dev.java.net/files/documents/7163/102851/visualvm_10.zip">Download</a>, <a href="relnotes10.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.0</b><br><small style="margin-left: 10px;">Released: July 8th, 2008, <a href="http://java.net/projects/visualvm/downloads/download/release10/visualvm_10.zip">Download</a>, <a href="relnotes10.html">Release Notes</a></small></div>
                             </td>
                             
                             <td>
