relnotes for 1.3.2 fixed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2938 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/relnotes.html
+++ b/www/relnotes.html
@@ -114,6 +114,9 @@
                 <p style="margin-top: 5px; margin-bottom: 10px;">
                     <b>Fixed bugs:</b><br>
                     <ul>
+                        <li><a href="http://java.net/jira/browse/VISUALVM-412">Issue 412</a>: Malicious code vulnerability warnings reported by findbugs
+                        </li>
+
                         <li><a href="http://java.net/jira/browse/VISUALVM-430">Issue 430</a>: Stack overflow at disconnect of JMX application
                         </li>
 
