--- a/www/build.html
+++ b/www/build.html
@@ -32,9 +32,8 @@ followed by<br>
 
 <p>The layout in <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release132">SVN</a> for VisualVM 1.3.2 release is:</p>
 <ul>
-    <li>visualvm
+    <li>release132
         <ul>
-            <li>www&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;--- web pages</li>
             <li>visualvm&nbsp;&nbsp;&lt;--- core tool suite</li>
             <li>plugins&nbsp;&nbsp;&nbsp;&nbsp;&lt;--- for plugin center (jconsole, mbeans, glassfish)</li>
         </ul>
@@ -43,13 +42,13 @@ followed by<br>
 <p>
 To build the visualvm core tool you need the NetBeans 6.9.1 platform and profiler binaries available
 <a href="http://java.net/projects/visualvm/downloads/download/dev/nb691_visualvm_01032011.zip">here</a>.
-These binaries must be extracted into the visualvm/visualvm directory. You can use <code>ant run</code>
+These binaries must be extracted into the release132/visualvm directory. You can use <code>ant run</code>
 or <code>ant build-zip</code> to build or run VisualVM.
 </p>
 <p>
 To build the plugins suite, use <code>ant build</code> or <code>ant run</code>. This will automatically
-build the zip distribution of the visualvm core tool into visualvm/visualvm/dist/visualvm.zip and extract
-it into the visualvm/plugins/visualvm directory. After that the build of the plugins suite continues to
+build the zip distribution of the visualvm core tool into release132/visualvm/dist/visualvm.zip and extract
+it into the release132/plugins/visualvm directory. After that the build of the plugins suite continues to
 build each of the individual plugins.</p>
 </body>
 </html>
